# sfm-3rd-year-project

./: .clang-format  .gitignore  LICENSE  README.md
c++/: CMakeLists.txt  CarmeraCalib.cpp  ImagePair.cpp  ImagePair.h  ImageView.cpp  ImageView.h  SfmReconstruction.cpp  SfmReconstruction.h  drawUtil.cpp  drawUtil.h  main.cpp  test.py  util.cpp  util.h
c++/.cache/clangd/index/: BundleAdjustment.h.E96E58130C766354.idx  CameraCalibration.cpp.84DFFDA28B052426.idx  CameraCalibration.h.E2175712A8DB4038.idx  CommonUtil.cpp.D7E829DF775A0945.idx  CommonUtil.h.DA247D18953DDB54.idx  FeatureUtil.cpp.ED9F06DBFB3D85E2.idx  FeatureUtil.h.8B0390BDC7C3BDAF.idx  IOUtil.cpp.A3AC8B316F23CEB5.idx  IOUtil.h.7DD34BC6A802F560.idx  ImagePair.cpp.250BB9220F9C10A0.idx  ImageView.h.4B9F7045E1524057.idx  PlottingUtil.cpp.E7CF06F3A063913A.idx  PlottingUtil.h.98A6FE4242668FBB.idx  Segmentation.h.6F0A3F3E01E57DEA.idx  SfmBundleAdjustment.cpp.ED6797F6DE9E6F14.idx  SfmBundleAdjustment.h.C84ABC5D87F3A65B.idx  SfmReconstruction.cpp.1F4BDF1B8145D517.idx  SfmReconstruction.cpp.2A0E454384E94B1B.idx  SfmReconstruction.h.3CC6083FBE4250CE.idx  SfmStructures.h.3E76ED15F473FE6E.idx  StereoUtil.cpp.5DC49E25B9629B76.idx  StereoUtil.cpp.741F656293AAD2F9.idx  StereoUtil.h.B157BD63D5B85100.idx  drawUtil.cpp.B5F13754F1CD468E.idx  drawUtil.h.74F6019F7710266D.idx  main.cpp.6BC7A3B229E16735.idx  util.cpp.87C8A9D145F1A655.idx  util.h.0185252DE960443C.idx
c++/calibration/: CameraCalibration.cpp  CameraCalibration.h  K.xml  d.xml
c++/camera_calibration/: CameraCalibration.cpp  CameraCalibration.h
c++/include/: CommonUtil.h  FeatureUtil.h  IOUtil.h  ImagePair.h  ImageView.h  SfmBundleAdjustment.h  SfmReconstruction.h  SfmStructures.h  StereoUtil.h  drawUtil.h  util.h
c++/pointclouds/: castle-P30_AKAZE_BF.ply  castle-P30_ORB_FLANN.ply  fountain-P11_KAZE_BF.ply  fountain-P11_ORB_BF.ply  fountain-P11_ORB_FLANN.ply  room-P5_ORB_BF.ply  room-P5_SURF_FLANN.ply
c++/points-3d/: 0-1.json  0.json  1-2.json  1.json  2-3.json  2.json  3-4.json  3.json  4-5.json  4.json  5-6.json  5.json  6-7.json  6.json  7-8.json  7.json  8-9.json  8.json  9-10.json  9.json  99-100.json  final.json  homoo.json  maybe_win.json  norm.json  norm1.json  norm2.json  points.json  refact.json
c++/points-3d_pairs/: 0-1.json  1-2.json  2-3.json  3-4.json  33-34.json  34-35.json  4-5.json  5-6.json  6-7.json  7-8.json  8-9.json  88-89.json  9-10.json
c++/src/: CommonUtil.cpp  FeatureUtil.cpp  IOUtil.cpp  ImagePair.cpp  ImageView.cpp  PlottingUtil.cpp  Segmentation.cpp  SfmBundleAdjustment.cpp  SfmReconstruction.cpp  StereoUtil.cpp  drawUtil.cpp  main.cpp  util.cpp
c++/visualiser/: CMakeLists.txt  Segmentation.cpp  Segmentation.h  pcl_visualizer_demo.cpp
c++/visualiser/.cache/clangd/index/: pcl_visualizer_demo.cpp.7475697CB1CFB2C9.idx
calibrator/: CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  calibrate.py  undistort.py
calibrator/.cache/clangd/index/: CameraCalibration.cpp.27809B3F637A3DE6.idx  CameraCalibration.h.5BCF286A74C2AA0F.idx
calibrator/cameras/: iphone15pro_vertical.xml
pipeline/: CMakeLists.txt  after_ba.ply  background_removal.py  before_ba.ply
pipeline/cameras/: default_horizontal.xml  dji3mini_4k_horizontal.xml  dji3mini_4k_vertical.xml  iphone15pro_horizontal.xml  iphone15pro_horizontal_05.xml  iphone15pro_vertical.xml  tim_horizontal.xml  tim_horizontal_2.xml
pipeline/include/: CommonUtil.h  FeatureUtil.h  IOUtil.h  PMVS2Reconstruction.h  PoissonReconstruction.h  SfmBundleAdjustment.h  SfmReconstruction.h  StereoUtil.h
pipeline/pointclouds/: 55-P11_ORB_FLANN.ply  55-P11_SIFT_FLANN.ply  55-P11_SURF_FLANN.ply  b-test_ORB_FLANN.ply  bowser-P11_good_ORB_FLANN.ply  bowser-P17_ORB_FLANN.ply  bowser-P17_SIFT_FLANN.ply  bowser-P8_ORB_FLANN.ply  bowser-P8_SIFT_FLANN.ply  bowser-P8_SURF_FLANN.ply  box-P7_KAZE_FLANN.ply  (+37 more)
project/: CMakeLists.txt
project/.cache/clangd/index/: BundleAdjustment.cpp.87AF12CB7FD852F2.idx  CameraCalibration.cpp.67D34ADE8DE32AF0.idx  CommonUtil.cpp.21C79A7438355469.idx  CommonUtil.cpp.40F9F92C7B27EE3D.idx  CommonUtil.cpp.D7E829DF775A0945.idx  CommonUtil.h.571C3E10C2E95CA9.idx  FeatureUtil.cpp.6E3395A9FB4DD215.idx  FeatureUtil.cpp.983C17E17BA581CD.idx  FeatureUtil.cpp.ED9F06DBFB3D85E2.idx  FeatureUtil.h.D19E888D1965119A.idx  IOUtil.cpp.3F9DC33E24FF56FE.idx  IOUtil.cpp.A3AC8B316F23CEB5.idx  IOUtil.h.5567772ADAA53022.idx  ImagePair.h.4C95879F9BEDE95A.idx  ImageView.cpp.6529B02FD94F78E0.idx  ImageView.h.4B9F7045E1524057.idx  PMVS2Reconstruction.cpp.8241A3B38CDA49A8.idx  PMVS2Reconstruction.h.1B6EA3CD736D4B3C.idx  PlottingUtil.cpp.4AC8DA254FF85923.idx  PlottingUtil.cpp.ACCCF742888D1D42.idx  PlottingUtil.cpp.E7CF06F3A063913A.idx  PlottingUtil.h.D60B2A842C226519.idx  Segmentation.cpp.84C30627D415EBC5.idx  SfmBundleAdjustment.cpp.6C084D42685D4632.idx  SfmBundleAdjustment.cpp.DB9D1032F7251BFE.idx  SfmBundleAdjustment.cpp.ED6797F6DE9E6F14.idx  SfmReconstruction.cpp.A7192A0BE55BC9AE.idx  SfmReconstruction.h.464306BBA6EDF7D9.idx  SfmStructures.h.C09BCB729DB9771D.idx  StereoUtil.cpp.741F656293AAD2F9.idx  StereoUtil.cpp.A16228FA3D2AFCB1.idx  StereoUtil.h.8E4C77E9CCDA6FF0.idx  StereoUtil.h.B157BD63D5B85100.idx  main.cpp.0D8C9815170786CE.idx
project/calibration/: K.json
project/include/: IOUtil.h  PlottingUtil.h  Segmentation.h  SfmBundleAdjustment.h  SfmReconstruction.h  SfmStructures.h  StereoUtil.h
project/pointclouds/: castle-P19_SIFT_FLANN.ply  castle-P30_SURF.ply  edi-P8_SURF_FLANN.ply  fountain-P11_AKAZE_BF.ply  fountain-P11_SIFT_BF.ply  room-P22_SURF_FLANN.ply  room-P5_ORB_FLANN.ply  statue-P4_ORB_FLANN.ply
project/reconstructions/: castle-P19_ORB_FLANN_MAP3D.pcd  castle-P19_ORB_FLANN_MESH.ply  castle-P19_ORB_FLANN_MESH_RGB.ply
project/src/: CommonUtil.cpp  IOUtil.cpp  PMVS2Reconstruction.cpp  SfmBundleAdjustment.cpp  SfmReconstruction.cpp  StereoUtil.cpp  main.cpp
project/visualizer/: CMakeLists.txt  pcl_visualizer.cpp
project/visualizer/.cache/clangd/index/: visualizer.cpp.A1707D0A15618E88.idx
python/: matrix3dpts.json  refactoring.ipynb  testing.ipynb
visualizer/: visualizer.cpp
(+1136 files in other folders)
